k8s/base/postgres/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vrs-postgres
  labels:
    app.kubernetes.io/name: visitor-registration-system
    app.kubernetes.io/component: database
